RESOLVED FIXED81705
REGRESSION (r111416): fast/dom/prototype-inheritance-2.html is failing
https://bugs.webkit.org/show_bug.cgi?id=81705
Summary REGRESSION (r111416): fast/dom/prototype-inheritance-2.html is failing
mitz
Reported 2012-03-20 15:30:39 PDT
<http://trac.webkit.org/r111416> caused fast/dom/prototype-inheritance-2.html to fail in Mac WebKit2, and, according to bug 80696 comment 59, also GTK and Qt.
Attachments
Patch (2.78 KB, patch)
2012-03-21 03:20 PDT, Vineet Chaudhary (vineetc)
no flags
mitz
Comment 1 2012-03-20 16:23:00 PDT
This is not port-specific at all.
mitz
Comment 2 2012-03-20 16:38:08 PDT
Updated the Mac expected results for this test in <http://trac.webkit.org/r111466>.
Philippe Normand
Comment 3 2012-03-21 02:07:19 PDT
I'll skip it in GTK.
Vineet Chaudhary (vineetc)
Comment 4 2012-03-21 03:19:08 PDT
I have figured out the reason for failing test. I no sure why bot didn't catch this.
Vineet Chaudhary (vineetc)
Comment 5 2012-03-21 03:20:08 PDT
Created attachment 133002 [details] Patch Attaching patch to fix issue. Sorry for the inconvenience caused.
Csaba Osztrogonác
Comment 6 2012-03-21 03:22:41 PDT
Comment on attachment 133002 [details] Patch rs=me
WebKit Review Bot
Comment 7 2012-03-21 04:21:41 PDT
Comment on attachment 133002 [details] Patch Clearing flags on attachment: 133002 Committed r111520: <http://trac.webkit.org/changeset/111520>
WebKit Review Bot
Comment 8 2012-03-21 04:21:46 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.