https://bugs.webkit.org/show_bug.cgi?id=81705 REGRESSION (r111416): fast/dom/prototype-inheritance-2.html is failing.

Patch by Vineet Chaudhary <rgf748@motorola.com> on 2012-03-21
Reviewed by Csaba Osztrogonác.

Source/WebCore:

No new tests.

* bindings/js/JSDOMBinding.h: Needs passing globalObject to constructArray().
(WebCore::jsArray):

LayoutTests:

* platform/mac/fast/dom/prototype-inheritance-2-expected.txt: Reverting test as it passes now.

Canonical link: https://commits.webkit.org/99023@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111520 268f45cc-cd09-0410-ab3c-d52691b4dbfc